tests/snapshots/spanshot_request@13007925104818636379.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_ref: AllocTemporary, mut_on_ref: Keep, allow_ref_pat_on_ref_mut: true, simplify_expressions: true, eat_two_layers: false, eat_inherited_ref: true }"
---
Query: `&[[&x]]: &[&mut [T]]`

&[[&x]] @ p: &[&mut [T]]
// Applying rule `Deref`
[[&x]] @ *p: [&mut [T]]
// Applying rule `Constructor`
[&x] @ (*p).0: &mut [T]
// Applying rule `ConstructorRef`
&x @ &mut (*(*p).0).0: &mut T
// Applying rule `Deref`
&x @ (&mut (*(*p).0).0 as &_): &T
// Applying rule `ExprSimplification`
&x @ &(*(*p).0).0: &T
// Applying rule `Deref`
x @ *&(*(*p).0).0: T

// Final bindings:
let x: T = *&(*(*p).0).0
