tests/snapshots/spanshot_request@1301796453921245760.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_on_ref: AllocTemporary
    mut_on_ref: Keep
    allow_ref_pat_on_ref_mut: true
    simplify_expressions: false
    eat_two_layers: false
    eat_inherited_ref_alone: true
  request: "[&ref mut x]: &mut [T]"
---
[&ref mut x] @ p: &mut [T]
// Applying rule `ConstructorRef`
&ref mut x @ &mut (*p).0: &mut T
// Applying rule `Deref`
&ref mut x @ (&mut (*p).0 as &_): &T
// Applying rule `Deref`
ref mut x @ *(&mut (*p).0 as &_): T
// Applying rule `Binding`
x @ &mut *(&mut (*p).0 as &_): &mut T

// Final bindings:
let x: &mut T = &mut *(&mut (*p).0 as &_) // Borrow-check error: MutBorrowBehindSharedBorrow
