tests/snapshots/spanshot_request@13141169536776052996.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_on_ref: AllocTemporary
    mut_on_ref: Keep
    allow_ref_pat_on_ref_mut: true
    simplify_expressions: true
    eat_two_layers: false
    eat_inherited_ref_alone: true
    downgrade_shared_inside_shared: false
  bundle_name: permissive
  request: "[&&mut x]: &[&mut T]"
---
[&&mut x] @ p: &[&mut T]
// Applying rule `ConstructorRef`
&&mut x @ &(*p).0: &&mut T
// Applying rule `Deref`
&mut x @ *&(*p).0: &mut T
// Applying rule `Deref`
x @ **&(*p).0: T

// Final bindings (simplified):
let x: T = *(*p).0
