tests/snapshots/spanshot_request@1339211147894703752.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_on_ref: AllocTemporary
    mut_on_ref: Keep
    allow_ref_pat_on_ref_mut: true
    simplify_expressions: true
    eat_two_layers: false
    eat_inherited_ref_alone: true
  request: "[&mut ref x]: [&mut T]"
---
[&mut ref x] @ p: [&mut T]
// Applying rule `Constructor`
&mut ref x @ p.0: &mut T
// Applying rule `Deref`
ref x @ *p.0: T
// Applying rule `Binding`
x @ &*p.0: &T

// Final bindings (simplified):
let x: &T = &*p.0
